Fix half-parsed plans